<project
xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion> 
	<parent>
	  <groupId>org.jboss.tools.teiid</groupId>
	  <artifactId>plugins</artifactId>
	  <version>0.0.4-SNAPSHOT</version>
	</parent>
	<groupId>org.jboss.tools</groupId>
	<artifactId>org.teiid.designer.core</artifactId> 
	<version>10.0.2-SNAPSHOT</version>
	<packaging>eclipse-plugin</packaging>
    <build>
        <plugins>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-compiler-plugin</artifactId>
                <version>${tychoVersion}</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
